# fin-catch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  fin-catch-app-schema.json  package.json  pnpm-lock.yaml  vitest.config.ts  vitest.setup.ts
.github/workflows/: build.yml
apps/native/: README.md  eslint.config.js  index.html  package.json
apps/native/scripts/: bump-version.js
apps/native/src-tauri/: Cargo.toml  tauri.conf.json
apps/native/src-tauri/src/: auth.rs  lib.rs  session.rs  shared_auth.rs  sync.rs  (+2 more)
apps/tauri/: .env  .env.example  README.md  RELEASE.md  eslint.config.js  fin-catch-app-schema.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/tauri/src/: App.tsx  main.tsx
apps/tauri/src-tauri/: Cargo.toml
apps/tauri/src-tauri/src/: auth.rs  db.rs  lib.rs  main.rs  session.rs  shared_auth.rs  shared_sync.rs  sync.rs  web_server.rs
apps/web/: .env  .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx  vite-env.d.ts
docs/: architecture.md  code-standards.md  codebase-summary.md  data-layer.md  project-overview-pdr.md
fin-catch-api/: Cargo.toml
fin-catch-api/src/: lib.rs  main.rs
fin-catch-api/src/gateway/: mod.rs
fin-catch-api/src/models/: exchange_rate.rs  gold.rs  gold_premium.rs  mod.rs  request.rs
fin-catch-api/src/routes/: mod.rs
fin-catch-api/src/sources/: exchange_rate_source_trait.rs  mod.rs  sjc.rs  vietcombank.rs  yahoo_finance.rs  yahoo_finance_exchange.rs
fin-catch-api/tests/: gateway_creation_test.rs  sources_integration_test.rs
fin-catch-app/: .env  .env.example  .gitignore  DESIGN_SYSTEM.md  README.md  RELEASE.md  fin-catch-app-schema.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
fin-catch-app/.github/workflows/: build.yml
fin-catch-app/public/fonts/: fonts.css
fin-catch-app/src/: App.tsx
fin-catch-app/src-tauri/: Cargo.toml  tauri.conf.json
fin-catch-app/src-tauri/src/: auth.rs  db.rs  lib.rs  sync.rs  web_server.rs
fin-catch-app/src/adapters/: ServiceFactory.ts  index.ts
fin-catch-app/src/hooks/: useAuth.ts  useCouponPayments.ts  useCurrencyPreference.ts  useHoldingsPerformance.ts  usePortfolioEntries.ts  usePortfolioPerformance.ts  usePortfolios.ts  useResponsiveChart.ts  useServerConnection.ts
fin-catch-app/src/services/: api.ts
fin-catch-app/src/styles/: global.css
fin-catch-app/src/types/: api.ts  auth.ts  benchmark.ts  form.ts  holdings.ts  index.ts  portfolio.ts  sync.ts
fin-catch-app/src/utils/: benchmark.ts  chartFormatters.ts  chartUtils.ts  currency.ts  dateUtils.ts  goldConversions.ts  holdings.ts  performanceCalculations.ts  platform.ts  preferences.ts
fin-catch-data/: Cargo.toml  README.md  TECHNICAL_DOCUMENT.md  test_all_sources.sh  test_sources.sh
fin-catch-data/.claude/: settings.local.json
fin-catch-data/docs/: README.md  SJC_GOLD_PRICE_IDS.md  sjc_gold_ids.json
fin-catch-data/examples/: display_sjc_metadata.rs  explore_sjc_gold_ids.rs
fin-catch-data/src/: error.rs  lib.rs  main.rs
fin-catch-data/src/gateway/: mod.rs
fin-catch-data/src/models/: gold_premium.rs  unified.rs
fin-catch-data/src/routes/: mod.rs
fin-catch-data/src/sources/: gold_source_trait.rs  sjc.rs  ssi.rs  vndirect.rs  yahoo_finance.rs
fin-catch-data/tests/: gateway_creation_test.rs  gold_premium_test.rs  metadata_price_scale_test.rs  sources_integration_test.rs  yahoo_finance_weekend_test.rs
plans/reports/: docs-manager-260311-2027-fin-catch-savings-asset.md  docs-manager-260312-1511-fin-catch-initial-docs.md
src/: error.rs  main.rs
src/gateway/: mod.rs
src/models/: mod.rs  request.rs  response.rs  unified.rs
src/routes/: mod.rs
src/sources/: mihong.rs  mod.rs  sjc.rs  source_trait.rs  ssi.rs  vndirect.rs
tests/: sources_integration_test.rs
(+95 files in other folders)
