[package]
name = "fin-catch-data"
version = "0.1.0"
edition = "2021"

[lib]
name = "fin_catch_data"
path = "src/lib.rs"

# Optional binary for standalone server
[[bin]]
name = "fin-catch-server"
path = "src/main.rs"
required-features = ["server"]

[features]
default = []
server = ["axum", "tower", "tower-http", "tracing-subscriber"]

[dependencies]
# Core dependencies (always needed)
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "cookies", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
tracing = "0.1"
async-trait = "0.1"
futures = "0.3"

# Optional server dependencies
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.5", features = ["cors", "trace"], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
