[package]
name = "fin-catch-app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant, but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "fin_catch_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
tokio = { version = "1", features = ["sync"] }

# Sync client library (uses reqwest internally)
qm-sync-client = { path = "../../../../qm-sync/qm-core-engine/qm-sync-client", features = ["reqwest-client"] }

# Financial data aggregation library
qm-fin-catch-data = { path = "../../../../qm-sync/qm-plugin/qm-fin-catch-data" }

# HTTP client for auth service
# Using rustls-tls instead of native-tls for Android cross-compilation support
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# UUID generation for sync
uuid = { version = "1.0", features = ["v4", "serde"] }

# Time utilities
chrono = "0.4"

# Environment variable loading
dotenvy = "0.15"

# Encryption for secure token storage
chacha20poly1305 = "0.10"
argon2 = "0.5"
base64 = "0.22"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# JWT token validation
jsonwebtoken = "9"

# Embedded http server for browser mode
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
rust-embed = "8"
mime_guess = "2"
async-stream = "0.3"
futures = "0.3"

# Machine ID for encryption key derivation (desktop only)
[target.'cfg(not(target_os = "android"))'.dependencies]
machine-uid = "0.5"

